@@ -26,6 +26,9 @@ HISTORY
 
   ++ Bugfixes:
 
+  2017-02-24: Simon Goldschmidt
+  * sockets.c: fixed that select ignored invalid/not open sockets in the fd_sets (bug #50392)
+
   2017-02-16: Simon Goldschmidt
   * LWIP_NETCONN_FULLDUPLEX: fixed shutdown during write (bug #50274)
 
